--- a/check24-holiday/src/SearchField.css
+++ b/check24-holiday/src/SearchField.css
@@ -6,6 +6,10 @@
     justify-content: center;
     justify-content: center;
     align-items: center;
+    background-image: url("./images/backgroundImg.jpg");
+    background-position: center;
+    background-size: cover;
+    
 }
 
 
@@ -17,23 +21,46 @@
     height: 220px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: space-around;
+    border-radius: 5px;
 }
 .searchField-horInput
 {
     display: flex;
+    flex-direction: row;
     gap: 10px;
     flex: 1;
+    align-items: center;
     
 }
 .input
 {
-    width: 300px;
+    flex: 1;
+    width: 100%;
+    padding: 10px;
+    border: none;
 }
 
 .inputContainer
 {
-    width: 100px;
+   margin: 15px;
+    display: flex;
+    flex-direction: column;
     height: 50px;
-    background-color: white;
+    flex: 1;
+    border-radius: 5px;
+    border: none;
+    overflow: hidden;
+}
+
+.searchField-button
+{
+    color: white;
+    background-color: #063773 ;
+    border: none;
+    padding: 20px 100px;
+    margin: 20px;
+    border-radius: 10px;
+    font-size: 1.1rem;
+    font-weight: bold;
 }
